fix(docs): narrowed scope of rule hiding overflow on page examples (#3037)

--- a/packages/theme-patternfly-org/components/example/example.css
+++ b/packages/theme-patternfly-org/components/example/example.css
@@ -33,7 +33,8 @@
   transition: width .2s ease-in-out;
 }
 
-.ws-preview-html {
+.ws-core-c-page.ws-preview > .ws-preview-html,
+.ws-react-c-page.ws-preview > .pf-c-page {
   overflow: hidden;
 }
 
